k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pixel-agent
  labels:
    app.kubernetes.io/part-of: pixel-agent
