k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: pixel-agent
  labels:
    app.kubernetes.io/name: api-server
    app.kubernetes.io/part-of: pixel-agent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
